2008-11-12  kitone  <kitone@gna.org>

	* Makefile.am:
	* intltool_se_plugin.m4:
	Add intltool_se_plugin.m4 file. (Patch: Luboš Staněk)

2008-11-04  kitone  <kitone@gna.org>

	* Makefile.am:
	Update.

	* Makefile.in:
	* codeset.m4:
	* gettext.m4:
	* glibc21.m4:
	* iconv.m4:
	* intdiv0.m4:
	* intltool.m4:
	* intmax.m4:
	* inttypes-pri.m4:
	* inttypes.m4:
	* inttypes_h.m4:
	* isc-posix.m4:
	* lcmessage.m4:
	* lib-ld.m4:
	* lib-link.m4:
	* lib-prefix.m4:
	* longdouble.m4:
	* longlong.m4:
	* nls.m4:
	* printf-posix.m4:
	* progtest.m4:
	* signed.m4:
	* size_max.m4:
	* stdint_h.m4:
	* uintmax_t.m4:
	* ulonglong.m4:
	* wchar_t.m4:
	* wint_t.m4:
	* xsize.m4:
	Remove files.

2008-11-03  kitone  <kitone@gna.org>

	* Makefile.in:

2008-11-03  kitone  <kitone@gna.org>

	* Makefile.in:
	libtoolize subtitleeditor.

2008-10-27  kitone  <kitone@gna.org>

	* Makefile.in:
	Remove dependance of pcre.

2008-08-20  kitone  <kitone@gna.org>

	* Makefile.in:
	Add dependence of glibmm >= 2.6.13. (patch by Luboš Staněk)

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.in:
	Add intltool.
	Patches by Luboš Staněk.

2008-08-13  kitone  <kitone@gna.org>

	* Makefile.in:
	* acx_pthread.m4:
	* ax_lang_compiler_ms.m4:
	Adds missing files from autoconf-archive for the AX_CHECK_GL macro.
	Patches by Luboš Staněk.

2008-06-12  kitone  <kitone@gna.org>

	* Makefile.in:
	Update.

2008-05-08  kitone  <kitone@gna.org>

	* Makefile.in:
	Add mkinstalldirs.

2008-03-13  kitone  <kitone@gna.org>

	* Makefile.am:
	* Makefile.in:
	* ax_check_gl.m4:
	New file, from http://code.google.com/p/autoconf-gl-macros/

2006-02-18  gettextize  <bug-gnu-gettext@gnu.org>

	* codeset.m4: New file, from gettext-0.14.1.
	* gettext.m4: New file, from gettext-0.14.1.
	* glibc21.m4: New file, from gettext-0.14.1.
	* iconv.m4: New file, from gettext-0.14.1.
	* intdiv0.m4: New file, from gettext-0.14.1.
	* intmax.m4: New file, from gettext-0.14.1.
	* inttypes.m4: New file, from gettext-0.14.1.