@@ -1,4 +1,5 @@
 m4_include([m4/acx_pthread.m4])
 m4_include([m4/ax_lang_compiler_ms.m4])
 m4_include([m4/ax_check_gl.m4])
+m4_include([m4/gst_element_check_required.m4])
 m4_include([m4/intltool_se_plugin.m4])
