@@ -1,6 +1,12 @@
 2008-11-12  kitone  <kitone@gna.org>
 
 	* Makefile.am:
+	* gst_element_check_required.m4:
+	Add SE_GST_ELEMENT_CHECK_REQUIRED marco.
+
+2008-11-12  kitone  <kitone@gna.org>
+
+	* Makefile.am:
 	* intltool_se_plugin.m4:
 	Add intltool_se_plugin.m4 file. (Patch: Luboš Staněk)
 
